--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@ton/ton": "^15.1.0",
     "@tonconnect/ui-react": "^2.0.0",
     "@twa-dev/sdk": "^6.9.1",
     "react": "^18.2.0",
